--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,24 @@
 ---
 - name: Install python-software-properties
+  sudo: yes 
   apt: name=python-software-properties state=latest update_cache=yes
 
 - name: Add Java repository to sources
+  sudo: yes 
   apt_repository: repo='ppa:webupd8team/java'
 
 - name: Automatically select the Oracle License
+  sudo: yes 
   shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
 
 - name: Install Oracle Java 7
+  sudo: yes 
   apt: pkg=oracle-java7-installer update_cache=yes
 
 - name: Install Java 7
+  sudo: yes 
   apt: pkg=oracle-java7-installer state=latest install_recommends=yes
 
 - name: Set Java 7 Env
+  sudo: yes 
   apt: pkg=oracle-java7-set-default state=latest install_recommends=yes
